Slightly more advanced support for points of interest

--- a/app/templates/poi/edit.hbs
+++ b/app/templates/poi/edit.hbs
@@ -7,4 +7,6 @@
     </label>
     <button type="submit">Save</button>
   </form>
+
+  <ConfirmationButton @onConfirm={{this.delete}}>Delete Point of Interest</ConfirmationButton>
 </article>
