--- a/app/templates/poi/new.hbs
+++ b/app/templates/poi/new.hbs
@@ -1,11 +1,15 @@
 <h2>Add a new point of interest</h2>
 
-<form {{on "submit" this.submit}}>
-  <label>
-    Name: <Input type="text" @value={{this.label}} @placeholder="Museum M" />
-  </label>
+{{#if (eq this.state "ok")}}
+  <form {{on "submit" this.submit}}>
+    <label>
+      Name: <Input type="text" @value={{this.label}} @placeholder="Museum M" />
+    </label>
 
-  <button type="submit">Create</button>
-</form>
+    <button type="submit">Create</button>
+  </form>
+{{else}}
+  An error occurred.
+{{/if}}
 
-{{outlet}}
+<LinkTo @route="poi.index">Overview</LinkTo>
