Allow rendering and entering experiences
It is becoming very apparent that we'll need to attach the scores to
an experience.  And that is near where we are at right now.

--- a/app/templates/poi/show.hbs
+++ b/app/templates/poi/show.hbs
@@ -1,9 +1,9 @@
 <article>
-  <h1>Point of interest</h1>
+  <h1>Point of interest: {{@model.label}}</h1>
 
-  {{@model.label}}
-
-  <LinkTo @route="poi.index">Overview</LinkTo> | <LinkTo  @route="poi.edit" @model={{@model}}>Edit</LinkTo>
+  <LinkTo @route="poi.index">Overview</LinkTo>
+  | <LinkTo  @route="poi.edit" @model={{@model}}>Edit</LinkTo>
+  | <LinkTo @route="poi.show.experiences.index" @model={{@model}}>Show experiences</LinkTo>
 </article>
 
 {{outlet}}
