Support for editing and deleting experiences
The logic and the view are somewhat retarded, but it does do its thing.

--- a/app/templates/experience/show.hbs
+++ b/app/templates/experience/show.hbs
@@ -1,7 +1,6 @@
 <h2>Experience: {{@model.title}}</h2>
 
-{{#if @model.pointOfInterest}}
-  <LinkTo @route="poi.show" @model={{hash id=@model.pointOfInterest.id}}>Show POI</LinkTo>
-{{/if}}
+<LinkTo @route="experience.edit" @model={{@model}}>Edit</LinkTo>
+| <LinkTo @route="poi.show" @model={{hash id=@model.pointOfInterest.id}}>Show POI</LinkTo>
 
 {{outlet}}
