Render tree with URI and optional custom components
The custom components are defined in the
utils/custom-component-mapping file such that we can configure the
components based on the URI of the entity we need to render.

--- a/app/templates/experience/show/tree.hbs
+++ b/app/templates/experience/show/tree.hbs
@@ -2,7 +2,9 @@
   <h1>{{this.model.title}}</h1>
   <ul>
   {{#each this.model.topLevelNodes as |node|}}
-    <li>{{node.title}}</li>
+    <li>
+      <Tree::Node @node={{node}} />
+    </li>
   {{/each}}
   </ul>
 </article>
