Allow entering of experience scores
Retrieving is currently zero-optimized and we are going to make stuff
up (for the tree) to render it efficiently.  However, not all details
will be shown at all times, and the tree can be fetched in an
intelligent manner.

We should be able to consume a bunch of settings from the hindrances
that we find in the Excel and how these are hooked together.

--- a/app/templates/components/tree/node.hbs
+++ b/app/templates/components/tree/node.hbs
@@ -1,12 +1,13 @@
 {{#if this.handlerComponent}}
-  {{component this.handlerComponent node=@node}}
+  {{component this.handlerComponent node=@node experience=@experience}}
 {{else}}
   {{@node.title}} ({{@node.uri}})
 
   <ul>
     {{#each @node.children as |child|}}
       <li>
-        <Tree::Node @node={{child}} />
+        <LinkTo @route="experience.edit.tree-node" @model={{hash id=this.experience.id tree_node_id=@node.id}}>[E]</LinkTo>
+        <Tree::Node @node={{child}} @experience={{@experience}} />
       </li>
     {{/each}}
   </ul>
