Saving of a property through a custom component
We can now save an individual property.  This property is a trivial
property, but it's a step forward towards a sustainable solution.

--- a/app/templates/experience/edit/tree-node.hbs
+++ b/app/templates/experience/edit/tree-node.hbs
@@ -7,4 +7,10 @@
   <button type="submit" {{on "click" this.submit}}>Set</button>
 </form>
 
+{{#if this.extendedEditComponent}}
+  {{component this.extendedEditComponent
+      treeNode=@model.treeNode
+      experience=@model.experience}}
+{{/if}}
+
 {{outlet}}
