Custom data entry components

--- a/app/templates/components/edit-components/wifi-availability.hbs
+++ b/app/templates/components/edit-components/wifi-availability.hbs
@@ -1,4 +1,4 @@
-<Input @checked={{this.paymentMovable}} @type="checkbox" />
+<Input @checked={{this.wifiAlwaysAvailable}} @type="checkbox" />
 
 <button {{on "click" this.save}}>save</button>
 
