Sort nodes in tree view
When showing the tree, the nodes are now sorted as in the Excel
sheet.  This should help us enter the data slightly more rapidly.

--- a/app/templates/experience/show/tree.hbs
+++ b/app/templates/experience/show/tree.hbs
@@ -1,7 +1,7 @@
 <article>
   <h1>{{this.model.title}}</h1>
   <ul>
-  {{#each this.model.topLevelNodes as |node|}}
+  {{#each this.sortedNodes as |node|}}
     <li>
       <Tree::Node @node={{node}} @experience={{this.experience}} />
     </li>
