--- a/app/templates/components/tree/node.hbs
+++ b/app/templates/components/tree/node.hbs
@@ -14,7 +14,7 @@
     <chart.if @state="open">
       {{#if @node.children.length}}
         <ul>
-          {{#each @node.children as |child|}}
+          {{#each this.sortedChildren as |child|}}
             <li>
               <LinkTo @route="experience.edit.tree-node" @models={{array @experience.id child.id}}>[E]</LinkTo>
               <Tree::Node @node={{child}} @experience={{@experience}} />
