--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,5 @@
-<h1>ToeVla data entry</h1>
+<AuMainHeader @homeRoute="poi" @appTitle="ToeVla data entry" />
 
-{{outlet}}
+<main class="au-c-main-container" id="main">
+  {{outlet}}
+</main>
