--- a/app/templates/experience/show/index.hbs
+++ b/app/templates/experience/show/index.hbs
@@ -1,3 +1,1 @@
-<LinkTo @route="experience.edit" @model={{@model}}>Edit</LinkTo>
-| <LinkTo @route="experience.show.tree" @model={{@model}}>Show tree</LinkTo>
-| <LinkTo @route="poi.show" @model={{hash id=@model.pointOfInterest.id}}>Show POI</LinkTo>
+<LinkTo @route="experience.show.tree" @model={{@model}}>Show tree</LinkTo>
