--- a/app/templates/poi/index.hbs
+++ b/app/templates/poi/index.hbs
@@ -1,11 +1,31 @@
-<h2>Listing points of interest</h2>
+<div class="au-c-main-container__content au-c-main-container__content--scroll"  id="content">
+  <div class="au-o-layout">
+    <div class="au-o-region-large">
+      <AuHeading @skin="2" class="au-u-margin-bottom">Locaties</AuHeading>
 
-<ul>
-  {{#each @model as |poi|}}
-    <LinkTo @route="poi.show" @model={{poi}}>
-      <li>{{poi.label}}</li>
-    </LinkTo>
-  {{/each}}
-</ul>
+      <ul class="au-o-grid au-o-grid--tiny">
+        {{#each @model as |poi|}}
+          <li class="au-o-grid__item">
+            <article class="au-o-box au-o-box--small au-c-card au-c-card--link">
+              <AuHeading @level="2" @skin="4">
+                <LinkTo @route="poi.show" @model={{poi}} class="au-c-link au-c-link--secondary au-c-card__link">
+                  {{poi.label}}
+                </LinkTo>
+              </AuHeading>
+              <AuPill>
+                {{poi.id}}
+              </AuPill>
+            </article>
+          </li>
+        {{/each}}
+      </ul>
 
-<LinkTo @route="poi.new">Add point of interest</LinkTo>
+      <p class="au-u-margin-top">
+        <LinkTo @route="poi.new" class="au-c-button au-c-button--block">
+          <AuIcon @icon="add" @alignment="left" />
+          Locatie toevoegen
+        </LinkTo>
+      </p>
+    </div>
+  </div>
+</div>
