--- a/app/templates/experience/show.hbs
+++ b/app/templates/experience/show.hbs
@@ -1,3 +1,37 @@
-<h2>Experience: {{@model.title}}</h2>
+<div class="au-c-main-container__content au-c-main-container__content--scroll"  id="content">
+  <AuToolbar @border="bottom" @skin="tint" @size="medium">
+    <AuToolbarGroup>
+      <ul class="au-c-list-horizontal">
+        <li class="au-c-list-horizontal__item">
+          <AuLink @linkRoute="poi.index" @skin="secondary">
+            <AuIcon @icon="nav-left" @alignment="left" />
+            Locaties
+         </AuLink>
+        </li>
+        <li class="au-c-list-horizontal__item">
+          <LinkTo class="au-c-link au-c-link--secondary" @route="poi.show" @model={{hash id=@model.pointOfInterest.id}}>{{@model.pointOfInterest.label}}</LinkTo>
+        </li>
+        <li class="au-c-list-horizontal__item">
+          <strong>
+            {{@model.title}}
+          </strong>
+        </li>
+      </ul>
+    </AuToolbarGroup>
 
-{{outlet}}
+  </AuToolbar>
+  <AuToolbar @border="bottom" @size="large">
+    <AuToolbarGroup>
+      <AuHeading @skin="2"><AuPill>Event</AuPill> {{@model.title}}</AuHeading>
+    </AuToolbarGroup>
+    <AuToolbarGroup>
+      <LinkTo class="au-c-button au-c-button--secondary" @route="experience.edit" @model={{@model}}>
+        <AuIcon @icon="pencil" @alignment="left" />
+        Aanpassen
+      </LinkTo>
+    </AuToolbarGroup>
+  </AuToolbar>
+  <div class="au-o-box">
+    {{outlet}}
+  </div>
+</div>
