--- a/app/templates/experience/show.hbs
+++ b/app/templates/experience/show.hbs
@@ -4,7 +4,7 @@
       <ul class="au-c-list-horizontal">
         <li class="au-c-list-horizontal__item">
           <AuLink @linkRoute="poi.index" @skin="secondary">
-            <AuIcon @icon="nav-left" @alignment="left" />
+            <AuIcon @icon="arrow-left" @alignment="left" />
             Locaties
          </AuLink>
         </li>
