--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -75,6 +75,11 @@
 @import "ember-appuniversum/c-toolbar";
 
 
+// PROJECT COMPONENTS
+@import "project/c-body-container";
+@import "project/c-tree";
+
+
 // UTILITIES
 @import "appuniversum/u-align-text";
 @import "appuniversum/u-headings";
