--- a/app/styles/_shame.scss
+++ b/app/styles/_shame.scss
@@ -1,40 +1,4 @@
-.au-c-card--link {
-  @include au-font-size($au-h6);
-  position: relative;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  flex-wrap: wrap;
-  transition: box-shadow $au-transition;
 
-  &:hover {
-    box-shadow: 0 0 12px rgba($au-gray-900,.15), 0 0 2px rgba($au-gray-900,.1);
-  }
-
-  &:focus-within {
-    outline: $au-outline;
-  }
-
-  .au-c-pill {
-    position: relative;
-    z-index: 1;
-  }
-}
-
-.au-c-card__link {
-  &:focus {
-    outline: 0;
-  }
-
-  &:after {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-  }
-}
 
 
 // Toolbar group rows
@@ -54,4 +18,19 @@
   .au-c-pill {
     margin-right: $au-unit-small;
   }
+}
+
+// Add a fixed grid option for sidebar layouts (@TODO: update appuniversum)
+.au-o-grid--fixed {
+  height: 100%;
+  overflow: hidden;
+
+  > .au-o-grid__item {
+    height: 100%;
+  }
+}
+
+
+.au-c-theme-background {
+  background-color: $au-gray-100;
 }
