--- a/app/styles/project/_c-tree.scss
+++ b/app/styles/project/_c-tree.scss
@@ -1,7 +1,9 @@
 .au-c-tree {
-  width: 100%;
   height: 100%;
+  width: 100%;
+  background-color: $au-gray-100;
   overflow: auto;
+  padding: $au-unit;
 }
 
 .au-c-tree__list {
@@ -11,7 +13,7 @@
 }
 
 .au-c-tree__item--child .au-c-tree__list {
-  padding-left: $au-unit-small;
+  padding-left: $au-unit-small + $au-unit-tiny;
 
   &:before {
     content: '';
@@ -19,7 +21,7 @@
     top: 0;
     left: 0;
     height: 100%;
-    width: $au-unit-small;
+    width: $au-unit-small + $au-unit-tiny;
     background-color: $au-gray-200;
   }
 }
@@ -30,6 +32,10 @@
   margin-bottom: $au-unit-small;
   padding-bottom: $au-unit-small;
   border-bottom: 1px solid $au-gray-200;
+
+  &:last-child {
+    border-bottom: 0;
+  }
 }
 
 .au-c-tree__item--child {
@@ -38,6 +44,10 @@
   margin-bottom: $au-unit-tiny;
   border: 1px solid $au-gray-200;
   background-color: $au-white;
+
+  &:last-child {
+    border-bottom: 1px solid $au-gray-200;
+  }
 }
 
 .au-c-tree__item .au-c-tree__item .au-c-tree__item {
@@ -52,6 +62,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  flex-wrap: wrap;
 }
 
 .au-c-tree__item--child .au-c-tree__item-header {
@@ -124,7 +135,7 @@
   transition: color $au-transition;
 
   .au-c-icon {
-    margin-right: $au-unit-tiny;
+    margin-right: $au-unit-tiny/1.5;
   }
 
   &:after {
@@ -159,9 +170,12 @@
   font-family: $au-font;
   font-weight: $au-regular;
   color: $au-gray-600;
+  margin-top: $au-unit-tiny;
+  margin-bottom: $au-unit-tiny;
+  margin-right: $au-unit-tiny;
 
   .au-c-tree__item--child & {
-    margin-top: $au-unit-tiny;
+    margin-bottom: 0;
   }
 }
 
@@ -169,4 +183,5 @@
   height: 100%;
   width: 100%;
   background-color: $au-gray-100;
+  overflow: auto;
 }
