--- a/app/templates/experience/show/tree.hbs
+++ b/app/templates/experience/show/tree.hbs
@@ -5,14 +5,21 @@
     </AuHeading>
   </AuToolbarGroup>
 </AuToolbar>
-<div class="au-c-body-container au-c-body-container--scroll">
-  <div class="au-o-box au-c-tree-wrapper">
-    <ul class="au-c-tree">
-      {{#each this.sortedNodes as |node|}}
-      <li class="au-c-tree__item">
-        <Tree::Node @node={{node}} @experience={{this.experience}} />
-      </li>
-      {{/each}}
-    </ul>
+<div class="au-c-body-container au-c-body-container--scroll au-c-theme-background">
+  <div class="au-o-grid au-o-grid--flush au-o-grid--fixed">
+    <div class="au-o-grid__item au-u-2-3@medium">
+      <ul class="au-c-tree">
+        {{#each this.sortedNodes as |node|}}
+        <li class="au-c-tree__item">
+          <Tree::Node @node={{node}} @experience={{this.experience}} />
+        </li>
+        {{/each}}
+      </ul>
+    </div>
+    <div class="au-o-grid__item au-u-1-3@medium">
+      <div class="au-c-action-sidebar">
+        {{outlet}}
+      </div>
+    </div>
   </div>
 </div>
