--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -79,6 +79,7 @@
 @import "project/c-body-container";
 @import "project/c-action-sidebar";
 @import "project/c-tree";
+@import "project/c-toggle";
 
 
 // UTILITIES
