--- a/app/templates/experience/show/tree.hbs
+++ b/app/templates/experience/show/tree.hbs
@@ -7,7 +7,7 @@
 </AuToolbar>
 <div class="au-c-body-container au-c-body-container--scroll au-c-theme-background">
   <div class="au-o-grid au-o-grid--flush au-o-grid--fixed">
-    <div class="au-o-grid__item au-u-2-3@medium">
+    <div class="au-o-grid__item au-u-1-2 au-u-2-3@medium">
       <ul class="au-c-tree">
         {{#each this.sortedNodes as |node|}}
         <li class="au-c-tree__item">
@@ -16,10 +16,8 @@
         {{/each}}
       </ul>
     </div>
-    <div class="au-o-grid__item au-u-1-3@medium">
-      <div class="au-c-action-sidebar">
-        {{outlet}}
-      </div>
+    <div class="au-o-grid__item au-u-1-2 au-u-1-3@medium">
+      {{outlet}}
     </div>
   </div>
 </div>
